# MarkOS-AgentFlow

./: .dockerignore  .env.enterprise.example  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AgentFlow_PRD.docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STATIC_SITE_DEPLOY.md  agent-dashboard.html  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pytest.ini  tsconfig.json  vitest.config.ts
backend/: README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase2_foundation.py  0002_agent_catalog_management.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agents.py  dashboard.py  deps.py  health.py  router.py  skills.py  tasks.py  teams.py  ws.py
backend/app/api/v1/: router.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  agent.py  artifact.py  project.py  skill.py  task.py  team.py
backend/app/prompts/: dev_agent.md  pm_agent.md  qa_agent.md
backend/app/schemas/: __init__.py  agent.py  dashboard.py  handoff.py  project.py  realtime.py  skill.py  task.py  team.py
backend/app/services/: __init__.py  agent_runner.py  agents.py  anthropic_client.py  dashboard.py  execution.py  file_storage.py  orchestrator.py  prompts.py  realtime.py  skills.py  tasks.py  teams.py
backend/tests/: conftest.py  test_agents_api.py  test_dashboard_api.py  test_health.py  test_main.py  test_orchestrator_service.py  test_realtime_ws.py  test_skills_api.py  test_task_run_api.py  test_tasks_api.py  test_teams_api.py
docker/: nginx.conf  (+4 more)
(+91 files in other folders)
